Fix display issues
1. Fix elements background color issue on Safari.
2. Fix modal elements not centered issue.
3. Add comments.

--- a/src/components/Modal/Modal.css
+++ b/src/components/Modal/Modal.css
@@ -22,6 +22,7 @@
 .Modal__text {
 	position: absolute;
 	top: 30vh;
+	margin: 0;
 	color: #0040DD;
 	text-shadow: -2px 2px 0 #FFF,
 							 2px -2px 0 #FFF,
@@ -49,7 +50,7 @@
 .Modal__btn-div {
 	position: absolute;
 	top: calc(30vh + 1.5 * min(9vw, 72px));
-	margin: 10px;
+	margin-top: 10px;
 	-webkit-transition: all 0s;
 	-moz-transition: all 0s;
 	-o-transition: all 0s;
@@ -78,6 +79,7 @@
 	font-size: max(min(3vw, 2vh), 10px);
 	margin: 5px 5px;
 	padding: 3px 10px;
+	background-color: #FFF;
 	border: 1px solid #0040DD;
 	color: #0040DD;
 	border-radius: 15px;
