--- a/src/index.css
+++ b/src/index.css
@@ -59,10 +59,6 @@ a {
 	color: inherit;
 }
 
-.red {
-	color: #D70015;
-}
-
 @media screen and (min-width: 600px) {
 	body {
 		font-size: 16px;
